--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+            <img class="first-slide" src="assets/img/F9.jpg" alt="First slide">
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <h1>玩命關頭9</h1>
+                <p>由已故演員保羅沃克（Paul Walker）飾演的「布萊恩」曾經為了陪伴老婆孩子，決定不再和唐老大玩命，但「蜜亞」再次出現，不知道《玩命關頭9》會怎麼續寫他們的故事呢？</p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=7k2P3mF5Eso" target="_self" role="button">預告片</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+            <img class="second-slide" src="assets/img/photo.jfif" alt="Second slide">
             <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <div class="carousel-caption text-left">
+                <h1>黑寡婦</h1>
+                <p>娜塔莎羅曼諾夫在德國機場放走「美國隊長」和「酷寒戰士」之後，遭到美國政府通緝，流亡的同時，她竟發現了關於自己身世的危險陰謀!《黑寡婦》聚焦娜塔莎的過去，講述她如何被培育成蘇聯紅房間諜，如何被「鷹眼」招募為神盾局特工，娜塔莎曾經的「學妹」葉蓮娜貝洛娃和兩人的養父養母也首次現身！</p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=-gQHSE7cJg8" target="_self" role="button">預告片</a></p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+            <img class="third-slide" src="assets/img/smile.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <h1>時尚惡女：庫伊拉</h1>
+                <p>故事設定在1970年代倫敦正值龐克搖滾的革命時期，一位名叫艾絲黛拉（艾瑪史東 飾）的年輕女孩，想憑著自己的才華在時尚界闖出自己的名號；直到有天她被馮赫爾曼男爵夫人相中（艾瑪湯普遜 飾），兩人從相知相惜演變到反目成仇，這讓艾絲黛拉的黑暗面逐漸展露，成為了人見人怕的時尚惡女 — 庫伊拉！</p>
+                <p><a class="btn btn-lg btn-primary" href="https://www.youtube.com/watch?v=n3cUpqUI42Y" target="_self" role="button">預告片</a></p>
               </div>
             </div>
           </div>
@@ -102,26 +102,32 @@
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
       <div class="container marketing">
-
+        <div>
+          <h2><strong>最新上映</strong></h2>
+          <br>
+        </div>
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <img class="rounded-circle" src="assets/img/images.jfif" alt="Generic placeholder image" width="160" height="150">
+            <h2>首映：2021延期</h2>
+            <li>類別：動作</li>
+            <li>主演：《玩命關頭》馮迪索（Vin Diesel）、蜜雪兒羅德里奎茲（Michelle Rodriguez）</li>
+            <p><a class="btn btn-secondary" href="https://zh.wikipedia.org/wiki/%E7%8E%A9%E5%91%BD%E9%97%9C%E9%A0%AD%E7%B3%BB%E5%88%97" target="_blank" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <img class="rounded-circle" src="assets/img/black.jpg" alt="Generic placeholder image" width="52%" height="48%">
+            <h2>首映：2021/7/9</h2>
+            <li>類別：動作</li>
+            <li>主演：《復仇者聯盟》史嘉蕾喬韓森、《小婦人》佛蘿倫絲普伊（Florence Pugh）、《神鬼傳奇》瑞秋懷茲（Rachel Weisz）</li>
+            <p><a class="btn btn-secondary" href="https://zh.wikipedia.org/wiki/%E9%BB%91%E5%AF%A1%E5%A9%A6_(%E9%9B%BB%E5%BD%B1)" target="_blank" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <img class="rounded-circle" src="assets/img/emma.jfif" alt="Generic placeholder image" width="160" height="153">
+            <h2>首映：2021/5</h2>
+            <li>類別：冒險</li>
+            <li>主演：《樂來樂愛你》艾瑪史東（Emma Stone）</li>
+            <p><a class="btn btn-secondary" href="https://zh.wikipedia.org/wiki/%E6%99%82%E5%B0%9A%E6%83%A1%E5%A5%B3%EF%BC%9A%E5%BA%AB%E4%BC%8A%E6%8B%89" target="_blank" role="button">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -132,11 +138,11 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">The Queen's Gambit <span class="text-muted">后翼棄兵</span></h2>
+            <p class="lead">Beth 頂尖的天賦和對西洋棋的熱愛讓她在棋界一砲而紅，成為人人口中殷羨的神童。神童的代價是什麼呢？就是犧牲了所有的玩樂時間，和朋友的社交時間，甚至是上學時間，她所有一切的一切都獻給了西洋棋。</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img  class="zoom" src="assets/img/queen.jfif" width="100%" height="70%" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -144,11 +150,11 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">Behind Her Eyes <span class="text-muted">三人要守密，兩人得死去</span></h2>
+            <p class="lead">講述在心裡診所擔任秘書的單親媽媽露易絲，與新來的心理醫生展開一段婚外情，又因緣際會認識他有精神病的太太愛黛兒。隨著她與這對夫妻的相處以及愛黛兒贈予她的一本祕密日記，露易絲從中推敲出夫妻倆的過往以及神祕的靈魂出竊、靈魂轉移。然而隨著她越深入了解事情始末，也漸漸感受到愛黛兒的不對勁，原來一切都是她精心策畫好的一場「靈魂轉移」騙局。</p>
           </div>
-          <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <div class="col-md-5">
+            <img class="zoom" src="assets/img/secret.jpg" width="100%" height="100%" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -156,11 +162,11 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">WandaVision <span class="text-muted">汪達與幻視</span></h2>
+            <p class="lead">由「緋紅女巫（汪達）」伊莉莎白歐森、「幻視」保羅貝特尼主演，背景設定於「終局之戰」的三週後，汪達因無法抑制失去幻視的悲痛導致能力失控，將一座小鎮打造成她心中的「復古家庭喜劇」，天劍局必須介入調查，同時也因為天劍局局長的私心、神秘女巫的攪局，讓一切變得一發不可收拾⋯⋯。</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="aoom" src="assets/img/wanda.jfif"  width="105%" height="105%" alt="Generic placeholder image">
           </div>
         </div>
 
